✏️ docs [#14] : actuator.yml 설정 application.yml 파일에 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,5 +7,6 @@ spring:
       - classpath:properties/database.yml
       - classpath:properties/jpa.yml
       - classpath:properties/eureka-client.yml
+      - classpath:properties/actuator.yml
   application:
     name: user-service
