--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,5 +8,7 @@ spring:
       - classpath:properties/jpa.yml
       - classpath:properties/eureka-client.yml
       - classpath:properties/actuator.yml
+  profiles:
+    active: local
   application:
     name: user-service
